avformat/file: Add crypto to default whitelist

Fixes Ticket5287

Signed-off-by: Michael Niedermayer <michael@niedermayer.cc>